[package]
name = "tidal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
reqwest = "0.11.22"
serde_json = "1.0.108"
tokio = {version = "1.34", features = ["full"]}
urlencoding = "2.1.3"
clap = {version = "4.4.8", features = ["derive"]}
lazy_static = "1.4.0"